Cart is perfect

--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -60,13 +60,15 @@
                     
               </li>
             </ul>
-            <ul class="navbar-nav ms-auto"> <!-- Ensures the cart is aligned to the right -->
+            <% if(locals.user){ %>
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a href="#" class="nav-link cart-link">
+                <a href="/cart" class="nav-link cart-link">
                   <i class="bi bi-cart-fill"></i>
-                  <span class="cart-badge">3</span>
+                  <!-- <span class="cart-badge">dvvd</span> -->
                 </a>
               </li>
+              <% } %>
             </ul>
           </div>
         </div>
