--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -64,7 +64,7 @@
         </ul>
         <ul class="navbar-nav ms-auto"> <!-- Ensures the cart is aligned to the right -->
           <li class="nav-item">
-            <a href="#" class="nav-link cart-link">
+            <a href="/cart" class="nav-link cart-link">
               <i class="bi bi-cart-fill"></i>
               <span class="cart-badge">3</span>
             </a>
