--- a/views/user/edit-profile.ejs
+++ b/views/user/edit-profile.ejs
@@ -33,9 +33,9 @@
                 <h3>Profile Navigation</h3>
                 <ul>
                     <li class="selected">View Profile</li>
+                    <li><a href="/address">Manage Address</a></li>
                     <li><a href="/wishlist">Wishlist</a></li>
-                    <li><a href="/profile/orders">Order History</a></li>
-                    <li><a href="/profile/settings">Account Settings</a></li>
+                    <li><a href="/orders">Orders</a></li>
                     <li><a href="/logout">Logout</a></li>
                 </ul>
             </div>
