--- a/views/user/user-profile.ejs
+++ b/views/user/user-profile.ejs
@@ -1,29 +1,41 @@
 <%- include('../partials/user/header.ejs') %>
-<link rel="stylesheet" href="profile-styles.css">
-<div class="wrapper">
-    <div class="user-profile-container">
-        <div class="user-details">
-            <h1>User Profile</h1>
-            <div class="user-info">
-                <p><strong>Name:</strong> <%= user.firstName %> <%= user.lastName %></p>
-                <p><strong>Email:</strong> <%= user.email %></p>
-                <p><strong>Mobile Number:</strong> <%= user.mobileNumber %></p>
-                <p class="<%= user.isBlocked ? 'danger' : 'success' %> " style="padding: 10px;"><strong>Status:</strong> <%= user.isBlocked ? 'Blocked' : 'Active' %></p>
+    <link rel="stylesheet" href="profile-styles.css">
+    <div class="wrapper">
+        <div class="user-profile-container">
+            <div class="user-details">
+                <h1>User Profile</h1>
+                <div class="user-info">
+                    <p><strong>Name:</strong>
+                        <%= user.firstName %>
+                            <%= user.lastName %>
+                    </p>
+                    <p><strong>Email:</strong>
+                        <%= user.email %>
+                    </p>
+                    <p><strong>Mobile Number:</strong>
+                        <%= user.mobileNumber %>
+                    </p>
+                    <p class="<%= user.isBlocked ? 'danger' : 'success' %> " style="padding: 10px;">
+                        <strong>Status:</strong>
+                        <%= user.isBlocked ? 'Blocked' : 'Active' %>
+                    </p>
+                </div>
+                <div class="user-edit"><button class="btn btn-info"><a href="/edit-profile">Edit Profile</a></button>
+                </div>
+                <div class="user-edit"><button class="btn btn-primary"><a href="/edit-password">Change
+                            Password</a></button></div>
             </div>
-            <div class="user-edit"><button class="btn btn-info"><a href="/edit-profile">Edit Profile</a></button></div>
-            <div class="user-edit"><button class="btn btn-primary"><a href="/edit-password">Change Password</a></button></div>
-        </div>
 
-        <div class="right-sidebar">
-            <h3>Profile Navigation</h3>
-            <ul>
-                <li class="selected">View Profile</li>
-                <li><a href="wishlist">Wishlist</a></li>
-                <li><a href="/profile/orders">Order History</a></li>
-                <li><a href="/profile/settings">Account Settings</a></li>
-                <li><a href="/logout">Logout</a></li>
-            </ul>
+            <div class="right-sidebar">
+                <h3>Profile Navigation</h3>
+                <ul>
+                    <li class="selected">View Profile</li>
+                    <li><a href="/address">Manage Address</a></li>
+                    <li><a href="/wishlist">Wishlist</a></li>
+                    <li><a href="/orders">Orders</a></li>
+                    <li><a href="/logout">Logout</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-<%- include('../partials/user/footer.ejs') %>
+    <%- include('../partials/user/footer.ejs') %>
