tasks done perfectly

--- a/public/admin/admin-styles.css
+++ b/public/admin/admin-styles.css
@@ -306,3 +306,14 @@ th {
         align-items: flex-start;
     }
 }
+
+.order-product-card{
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    max-width: 20rem;
+}
+
+li{
+    list-style-type: none;
+}
