--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -60,12 +60,13 @@
                     
               </li>
             </ul>
-            <% if(locals.user){ %>
+            
             <ul class="navbar-nav ms-auto">
+              <% if(locals.user){ %>
               <li class="nav-item">
                 <a href="/cart" class="nav-link cart-link">
                   <i class="bi bi-cart-fill"></i>
-                  <!-- <span class="cart-badge">dvvd</span> -->
+                  <!-- <span class="cart-badge"></span> -->
                 </a>
               </li>
               <% } %>
