--- a/views/user/order-placed.ejs
+++ b/views/user/order-placed.ejs
@@ -46,31 +46,31 @@
         <div class="delivery-address">
             <h3>Delivery Address</h3>
             <p><strong>Name:</strong>
-                <%= order.address[0].name %>
+                <%= order.address.name %>
             </p>
             <p> <strong>House Name:</strong>
-                <%= order.address[0].houseName %>
+                <%= order.address.houseName %>
             </p>
             <p><strong>Street Name:</strong>
-                <%= order.address[0].streetName %>
+                <%= order.address.streetName %>
             </p>
             <p><strong>Landmark:</strong>
-                <%= order.address[0].landmark %>
+                <%= order.address.landmark %>
             </p>
             <p><strong>Locality:</strong>
-                <%= order.address[0].locality %>
+                <%= order.address.locality %>
             </p>
             <p><strong>City:</strong>
-                <%= order.address[0].city %>
+                <%= order.address.city %>
             </p>
             <p><strong>State:</strong>
-                <%= order.address[0].state %>
+                <%= order.address.state %>
             </p>
             <p></p><strong>PIN:</strong>
-            <%= order.address[0].pin %>
+            <%= order.address.pin %>
                 </p>
                 <p><strong>Contact No:</strong>
-                    <%= order.address[0].contactNo %>
+                    <%= order.address.contactNo %>
                 </p>
         </div>
 
