--- a/views/user/view-orders.ejs
+++ b/views/user/view-orders.ejs
@@ -19,31 +19,31 @@
                                 <p>
                                 <ul>
                                     <li><strong>Name:</strong>
-                                        <%= order.address[0].name %>
+                                        <%= order.address.name %>
                                     </li>
                                     <li><strong>House Name:</strong>
-                                        <%= order.address[0].houseName %>
+                                        <%= order.address.houseName %>
                                     </li>
                                     <li><strong>Street Name:</strong>
-                                        <%= order.address[0].streetName %>
+                                        <%= order.address.streetName %>
                                     </li>
                                     <li><strong>Landmark:</strong>
-                                        <%= order.address[0].landmark %>
+                                        <%= order.address.landmark %>
                                     </li>
                                     <li><strong>Locality:</strong>
-                                        <%= order.address[0].locality %>
+                                        <%= order.address.locality %>
                                     </li>
                                     <li><strong>City:</strong>
-                                        <%= order.address[0].city %>
+                                        <%= order.address.city %>
                                     </li>
                                     <li><strong>State:</strong>
-                                        <%= order.address[0].state %>
+                                        <%= order.address.state %>
                                     </li>
                                     <li><strong>PIN:</strong>
-                                        <%= order.address[0].pin %>
+                                        <%= order.address.pin %>
                                     </li>
                                     <li><strong>Contact No:</strong>
-                                        <%=order.address[0].contactNo %>
+                                        <%=order.address.contactNo %>
                                     </li>
                                 </ul>
                                 </p>
